removing vectors